--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,3 +8,16 @@ services:
       - ./src/:/usr/src/app/
     ports:
       - 8000:8000
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db/postgres_db
+  db:
+    image: postgres:12.1-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres_db
+
+volumes:
+  postgres_data:
