--- a/backend/src/requirements.txt
+++ b/backend/src/requirements.txt
@@ -1,10 +1,8 @@
 fastapi==0.48.0
-psycopg2-binary==2.8.4
-SQLAlchemy==1.3.13
+pymongo==3.10.1
 uvicorn==0.11.2
 
 
 # dev
 pytest==5.3.5
 requests==2.22.0
-sqlalchemy-utils==0.36.1
