--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       MONGODB_URL: "mongodb://mongodb:27017"
       MONGODB_DB_NAME: "burriking"
       MONGODB_COLLECTION: "orders"
-      MONGODB_COLLECTION_TEST: "orders"
+      MONGODB_COLLECTION_TEST: "test"
     depends_on:
       - mongodb
   mongodb:
