--- a/backend/src/requirements.txt
+++ b/backend/src/requirements.txt
@@ -1,9 +1,10 @@
-fastapi==0.48.0
+fastapi==0.52.0
 pymongo==3.10.1
-uvicorn==0.11.2
+uvicorn==0.11.3
 
 
 # dev
-freezegun==0.3.14
+freezegun==0.3.15
 pytest==5.3.5
-requests==2.22.0
+pytest-pycodestyle==2.0.0
+requests==2.23.0
